# backend-template

./: .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  Taskfile.yml  alembic.ini  docker-compose.yml  dockerfile  graphql.config.yml  main.py  pyproject.toml  schema.graphql  tiltfile  tiltfile.example
.github/workflows/: lint.yaml  test.yaml
.k8s/app/: Chart.yaml  values-dev.example.yaml  values.schema.json  values.yaml
.k8s/app/charts/redis/: Chart.yaml  values.yaml
.k8s/app/charts/redis/templates/: _labels.tpl  networkpolicy.yaml  service.yaml  statefulset.yaml
.k8s/app/templates/: _helpers.tpl  _labels.tpl  cronjobs.yaml  deployment.yaml  ingress.yaml  migrate-hook.yaml  migrate.yaml  service.yaml
.k8s/app/templates/api/: _templates.tpl  deployment.yaml  ingress.yaml  service.yaml
.k8s/app/templates/celery/: _labels.tpl  celery-beat.yaml  celery-configmap.yaml  celery-worker.yaml
.k8s/app/templates/redis/: _labels.tpl  deployment.yaml  service.yaml
.k8s/app/templates/workers/: _templates.tpl  workers.yaml
.k8s/fastapi/: values.yaml
.k8s/fastapi/templates/: _helpers.tpl  _labels.tpl  deployment.yaml  ingress.yaml  migrate.yaml  service.yaml
src/: app.py  middleware.py  schema.py  sentry.py  settings.py
src/adapters/api/: app.py
src/adapters/api/books/: __init__.py  _router.py  router.py  schema.py
src/adapters/graphql/: context.py  dataloaders.py  dto.py  schema.py
src/adapters/graphql/apps/books/: _inputs.py  _mutations.py  _payloads.py  _query.py  types.py
src/alembic/: env.py
src/alembic/versions/: 2022-06-28-17-42-57_7722a16c2bac_initial.py  2022-08-30-05-52-11_4b281d647068_make_book_title_unique.py
src/api/: app.py  middleware.py
src/api/books/: router.py  schema.py
src/app/: sentry.py  settings.py  telemetry.py
src/app/adapters/api/: app.py  schema.py
src/app/adapters/api/books/: _router.py  schema.py
src/app/adapters/graphql/: app.py  context.py  dto.py  errors.py  schema.py
src/app/adapters/graphql/apps/books/: __init__.py  _inputs.py  _mutations.py  _payloads.py  _query.py  types.py
src/app/alembic/: env.py
src/app/alembic/versions/: 2022-06-28-17-42-57_7722a16c2bac_initial.py  2022-08-30-05-52-11_4b281d647068_make_book_title_unique.py
src/app/connectors/db/: __init__.py  _autoimport.py  _engine.py
src/app/connectors/db/migrations/: env.py  script.py.mako
src/app/core/: di.py
src/app/core/books/: __init__.py  _providers.py  queries.py  repositories.py
src/app/core/di/: __init__.py  _container.py
src/app/core/di/_modules/: books.py  database.py  settings.py
src/app/core/di/_modules/connectors/: database.py
src/app/core/di/_modules/domain/: books.py
src/app/core/domain/books/: commands.py  dto.py  models.py  queries.py  repositories.py  services.py
src/app/db/: __init__.py  _providers.py
src/app/db/models/: __init__.py  _book.py
src/apps/books/: dto.py  exceptions.py  router.py  schema.py  services.py
src/core/: di.py  dto.py  types.py
src/core/books/: _providers.py  commands.py  dto.py  errors.py  exceptions.py  queries.py  repositories.py  services.py
src/db/: __init__.py  _context.py  _engine.py  _providers.py  base.py  dependencies.py  engine.py
src/db/models/: __init__.py  _book.py  book.py
src/lib/: db.py  dto.py  settings.py  time.py
src/tasks/: __main__.py  app.py
tests/: conftest.py  conftest_db.py  conftest_services.py  test_db.py  test_imports.py
tests/api/: test_healthcheck.py
tests/api/books/: test_create.py  test_retrieve.py
tests/core/: test_books.py
tests/graphql/: client.py  conftest.py
tests/graphql/books/: test_create.py  test_get.py
tests/plugins/: database.py  fixture_typecheck.py  http_app.py  services.py
tests/unit/: test_books.py
