[project]
name = "fastapi-template"
version = "0.0.1"
description = ""
license = { text = "MIT" }
authors = [
    { name = "Doctor", email = "thirvondukr@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "aioinject>=0.35.0",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.4",
    "orjson>=3.10.10",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "result>=0.17.0",
    "sentry-sdk>=2.17.0",
    "sqlalchemy>=2.0.36",
    "strawberry-graphql>=0.247.0",
    "uvicorn>=0.32.0",
    "uvloop>=0.19.0; sys_platform != \"win32\"",
]

[tool.uv]
dev-dependencies = [
    "anyio>=4.6.0",
    "asgi-lifespan>=2.1.0",
    "coverage>=7.6.2",
    "deptry>=0.20.0",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-archon>=0.0.6",
    "ruff>=0.6.9",
    "sqlalchemy-pytest>=0.3.2.post1",
    "typeguard>=4.3.0",
]


[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.run]
source = ["src"]
omit = ["src/app/alembic/*"]
command_line = "-m pytest -v --reuse-db"
concurrency = ["greenlet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "class .*\\(.*\\bProtocol\\b.*\\):",
    "@(?:typing\\.)?overload",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2
fail_under = 100


[tool.deptry]
[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "uvloop", "asyncpg", "orjson"]

[tool.deptry.package_module_name_map]
uvloop = "uvloop"

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "strawberry.ext.mypy_plugin",
]

strict = true
follow_imports = "normal"
ignore_missing_imports = false

allow_redefinition = false
disallow_any_explicit = false
ignore_errors = false
local_partial_types = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

pretty = true
show_column_numbers = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff]
src = ["src", "tests"]
[tool.ruff.lint]
fixable = [
    "F",
    "E",
    "W",
    "I",
    "COM",
    "UP",
    "RUF",
]
unfixable = [
    "F841", # Variable  is assigned to but never used
]
select = ["ALL"]
ignore = [
    "E501", # Line Length
    "ANN101",
    "ANN102",
    "D10", # Disable mandatory docstrings
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "PD", # pandas-vet
    "TCH001",
    "TCH002",
    "TCH003",
    "EXE",
    "COM812",  # ruff format conflict
    "ISC001",  # ruff format conflict
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/app/alembic/*" = ["INP001"]
"src/app/alembic/versions/*" = ["D400", "D415"]
"src/app/db/models/*" = ["A003"]
"src/app/*/schema.py" = ["A003"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"starlette.status".msg = "Use http.HTTPStatus instead."
"fastapi.status".msg = "Use http.HTTPStatus instead."
"litestar.status_codes".msg = "Use http.HTTPStatus instead."
"httpx.codes".msg = "Use http.HTTPStatus instead."
